--- a/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/add-director/add-director.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/add-director/add-director.component.html
@@ -1,104 +1,59 @@
-<p>
-  
-<form (ngSubmit)="onSubmit()">
+<p-growl [value]="msgs"></p-growl>
 
-  <div class="row">
-
-    <div class="col-md-10">
-
-      <div class="card">
-        <div class="card-body"> 
-
-          <div class="form-group row">
-            <label 
-              for="fullName"
-              class="col-md-3 col-form-label">
-              <strong>Фамилия Имя Отчество</strong>
-            </label> 
-            <div class="col-md">
-              <input 
-                type="text" 
-                class="form-control"
-                placeholder="напр., Иванов Иван Иванович"
-                [(ngModel)]="director.fullName" 
-                name="fullName" 
-                #directorFullName="ngModel" 
-                minlength="2" 
-                required>
+<div class="ui-g-12">
+  <form form (ngSubmit)="onSubmit()">
+    <div class="ui-g-10">
+      <p-card>
+        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Фамилия, имя, отчество:</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" name="fullName" placeholder="напр., Иванов Иван Иванович"
+                [(ngModel)]="director.fullName">
             </div>
           </div>
-
-          <div class="form-group row">
-            <label 
-              for="shortName"
-              class="col-md-3 col-form-label">
-              <strong>Фамилия и Инициалы</strong>
-            </label> 
-            <div class="col-md">
-              <input 
-                type="text" 
-                class="form-control"
-                placeholder="напр., Иванов И.И."
-                [(ngModel)]="director.shortName" 
-                name="shortName" 
-                #directorShortName="ngModel" 
-                minlength="2" 
-                required>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Фамилия и инициалы:</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" name="shortName" placeholder="напр., Иванов И.И."
+                [(ngModel)]="director.shortName">
             </div>
           </div>
-
-          <div class="form-group row">
-            <label 
-              for="post"
-              class="col-md-3 col-form-label">
-              <strong>Должность</strong>
-            </label> 
-            <div class="col-md-5">
-              <select class="form-control" [(ngModel)]="director.post" name="post">
-                <option *ngFor="let post of posts" [ngValue]="post">{{post.title}}</option>
-              </select>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Должность:</b>
+            </div>
+            <div class="ui-grid-col-6">
+                <p-dropdown [options]="posts" [(ngModel)]="director.post" name="post" 
+                  optionLabel="title" [autoWidth]="false" placeholder="Выберите должность...">
+                </p-dropdown>
             </div>
           </div>
-
-          <div class="form-group row">
-            <label 
-              for="dateStart"
-              class="col-md-3 col-form-label">
-              <strong>Актуален с</strong>
-            </label>
-            <div class="col-md-3">
-              <input 
-                type="text" 
-                class="form-control"
-                [(ngModel)]="director.dateStart" 
-                name="dateStart"
-                #directorDateStart="ngModel" 
-                minlength="2" 
-                required>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Актуален с:</b>
+            </div>
+            <div class="ui-grid-col-3">
+              <p-calendar [(ngModel)]="director.dateStart" name="dateStart" placeholder="Дата"
+                [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}"
+                showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
             </div>
           </div>
-
         </div>
-      </div>
-
+      </p-card>
     </div>
-
-    <div class="col-md-2">
-      <button 
-        type="submit" 
-        class="btn btn-success btn-block">
-        <i class="fa fa-check-square-o"></i> Записать
+    <div class="ui-g-2">
+      <button pButton type="submit" label="Сохранить"
+        class="ui-button-success btn-block" icon="fa-check-square-o">
       </button>
-      <a class="btn btn-danger btn-block"
+      <button pButton type="button" label="Отменить" 
+        class="ui-button-danger btn-block" icon="fa-arrow-circle-o-left"
         [routerLink]="['../']">
-        <i class="fa fa-arrow-circle-o-left">
-          </i> Отменить
-      </a>
+      </button>
     </div>
-
-  </div>
-
-</form>
-
-  
-
+  </form>
+</div>
