--- a/crmapp/frontend/src/app/components/employee/add-employee/add-employee.component.html
+++ b/crmapp/frontend/src/app/components/employee/add-employee/add-employee.component.html
@@ -1,4 +1,152 @@
-<nav class="breadcrumb">
+<p-growl [value]="msgs"></p-growl>
+
+<p-sidebar [(visible)]="display" [baseZIndex]="10000">
+  <h4 style="font-weight:normal">
+    Главное меню
+  </h4>
+  <app-dashboard-menu></app-dashboard-menu>
+</p-sidebar>
+
+<div class="ui-g">
+  <div class="ui-g-4">
+    <button pButton type="button" (click)="display = true" icon="fa-bars"></button>
+    <button pButton type="button" label="Вернуться" class="ui-button-info"
+      icon="fa-arrow-circle-o-left" routerLink="../"></button>
+  </div>
+  <div class="ui-g-8">
+    <h4 style="font-weight:normal">
+      <b><ins>Новый сотрудник</ins></b>
+    </h4>
+  </div>
+</div>
+
+<div>
+  <p-tabMenu [model]="tabs"></p-tabMenu>
+</div>
+
+<div class="ui-g-12">
+  <form (ngSubmit)="onSubmit()">
+    <div class="ui-g-10">
+      <p-card>
+        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Физическое лицо: *</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <p-dropdown [options]="persons" [(ngModel)]="employee.person" 
+                name="person" filter="true" optionLabel="shortName" 
+                [autoWidth]="false" placeholder="Выберите физ. лицо...">
+              </p-dropdown>
+            </div>
+          </div>
+        
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Дата трудоустройства: *</b>
+            </div>
+            <div class="ui-grid-col-3">
+              <p-calendar [(ngModel)]="employee.hireDate" name="hireDate" placeholder="Дата" 
+                [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}" [locale]="ru" 
+                showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy">
+              </p-calendar>
+            </div>
+            <div class="ui-grid-col-3">
+                          
+            </div>
+          </div>
+          <!-- <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Полное название: *</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="title" placeholder="Обязательное поле"
+                [(ngModel)]="client.title">
+            </div>
+            <div class="ui-grid-col-3">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="!userform.controls['title'].valid&&userform.controls['title'].dirty">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите полное название (не менее 2 символов)!
+              </div>            
+            </div>
+          </div>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Псевдоним: *</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="alias" placeholder="Обязательное поле"
+                [(ngModel)]="client.alias">
+            </div>
+            <div class="ui-grid-col-3">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="!userform.controls['alias'].valid&&userform.controls['alias'].dirty">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите псевдоним (не менее 2 символов)!
+              </div>            
+            </div>
+          </div>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>ЕДРПОУ: *</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="edrpou" 
+                placeholder="Обязательное поле" pKeyFilter="num"
+                [(ngModel)]="client.edrpou">
+            </div>
+            <div class="ui-grid-col-3">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="!userform.controls['edrpou'].valid&&userform.controls['edrpou'].dirty">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите ЕДРПОУ (не менее 6 и не более 14 цифр)!
+              </div>            
+            </div>
+          </div>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>ИНН:</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="inn" 
+                placeholder="Введите ИНН (необязательное поле)"
+                [(ngModel)]="client.inn">
+            </div>
+            <div class="ui-grid-col-3">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="!userform.controls['inn'].valid">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите не более 14 цифр)!
+              </div>  
+            </div>
+          </div>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>№ свидетельства плат. НДС:</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="vatCertificate" 
+                placeholder="Введите № свид. НДС (необязательное поле)"
+                [(ngModel)]="client.vatCertificate" >
+            </div>
+          </div> -->
+        </div>
+      </p-card>
+    </div>
+    <div class="ui-g-2">
+      <button pButton type="submit" label="Записать"
+        class="ui-button-success btn-block" icon="fa-check-square-o">
+      </button>
+      <button pButton type="button" label="Отмена" 
+        class="ui-button-danger btn-block" icon="fa-times-rectangle-o"
+        [routerLink]="['../']">
+      </button>
+    </div>
+  </form>
+</div>
+
+<!-- <nav class="breadcrumb">
   <div class="row">
     <div class="col">
       <h5>
@@ -11,10 +159,10 @@
   </div>
 </nav>
 
-<p>
+<p> -->
 
 
-<!-- Nav tabs -->
+<!-- Nav tabs
 <ul class="nav nav-tabs card-header-tabs nav-fill" role="tablist">
   <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#main" role="tab">
     <i class="fa fa-address-card-o"></i> <strong>Основные данные</strong></a>
@@ -31,9 +179,9 @@
   <li class="nav-item"><a class="nav-link disabled" data-toggle="tab" href="#document" role="tab">
     <i class="fa fa-file-text-o"></i> <strong>Документооборот</strong></a>
   </li>
-</ul>          
+</ul>           -->
         
-      <form (ngSubmit)="onSubmit()">
+      <!-- <form (ngSubmit)="onSubmit()">
 
         <div class="row">
 
@@ -138,7 +286,7 @@
 
       </div>
 
-    </form>
+    </form> -->
 
   
     
